--- a/app/views/users/_follow_toggle.html.erb
+++ b/app/views/users/_follow_toggle.html.erb
@@ -10,7 +10,7 @@
   <button
     class="follow-toggle"
     data-user-id="<%= user.id %>"
-    data-follow-state="<%= is_following ? "Unfollow!" : "Follow!" %>"
+    data-follow-state="<%= is_following ? "Followed" : "Unfollowed" %>"
   >
     <%= is_following ? "Unfollow!" : "Follow!" %>
   </button>
